--- a/_posts/2011-07-14-movie-suggestions-beta-is-out.html
+++ b/_posts/2011-07-14-movie-suggestions-beta-is-out.html
@@ -1,18 +1,20 @@
 --- 
 layout: post
-title: Movie Suggestions Beta is out
+title: Movie Suggestions Beta
 published: true
 tags: 
 - android
 ---
-I just released my first Android application <a href="https://market.android.com/details?id=com.marcodinacci.android.movierec">on the Android market</a>. Technically it's the second but it's the first one on the market.
+<p>I just released my first Android application <a href="https://market.android.com/details?id=com.marcodinacci.android.movierec">on the Android market</a>. Technically it's the second but it's the first one on the market.</p>
 
-<strong>Movie Suggestions</strong> is a simple application that uses a couple of web services to find a list of movies that you may like.  
+<p><strong>Movie Suggestions</strong> is a simple application that uses a couple of web services to find a list of movies that you may like.  
 <img src="/img/ms_beta_screenshot.png" alt="Movie Suggestions screenshot" title="Movie Suggestions screenshot" width="168" height="300" class="align-left" />
-Once you select a movie you can then read some comments from reviewers and see the trailer on Youtube, where available. Graphics and functionalities are pretty basic at the moment but hopefully the only one thing it does it does it well. In any case, I made it to learn the Android framework and it's been a great exercise.
+Once you select a movie you can then read some comments from reviewers and see the trailer on Youtube, where available.</p> 
 
-I used the <a href="http://developer.rottentomatoes.com/">Rottentomatoes API</a> to search and retrieve movie informations and another web service to look for the trailer on Youtube. This last one actually saved me a lot of work.
+<p>Graphics and functionalities are pretty basic at the moment but hopefully the only one thing it does it does it well. In any case, I made it to learn the Android framework and it's been a great exercise.</p>
 
-The application is free and will always be but I'm not yet releasing the source code as it uses some libraries I've written that I don't want to release. I will definitely release the wrapper around the Rottentomatoes API as soon as I'll find the time.
+<p>I used the <a href="http://developer.rottentomatoes.com/">Rottentomatoes API</a> to search and retrieve movie informations and another web service to look for the trailer on Youtube. This last one actually saved me a lot of work.</p>
 
-UPDATE: <a href="https://github.com/mdinacci/rottentomatoes-for-android" title="source code">here</a> is the source code of the RottenTomatoes API wrapper. It's not a full wrapper but it covers most of the API.
+<p>The application is free and will always be but I'm not yet releasing the source code as it uses some libraries I've written that I don't want to release. I will definitely release the wrapper around the Rottentomatoes API as soon as I'll find the time.</p>
+
+<p>UPDATE: <a href="https://github.com/mdinacci/rottentomatoes-for-android" title="source code">here</a> is the source code of the RottenTomatoes API wrapper. It's not a full wrapper but it covers most of the API.</p>
