--- a/_posts/2011-05-10-advanced-listview-populating-a-list-with-images-and-text.html
+++ b/_posts/2011-05-10-advanced-listview-populating-a-list-with-images-and-text.html
@@ -11,8 +11,8 @@ tags:
 
 <p>The following is a tutorial on how to write a <code class="simple">ListView</code> that displays a static list of images and strings, similar to the settings list on your phone. </p>
 
-<p>For the impatients, here's the <a href="http://www.intransitione.com/code/android/adv_listview_demo.zip">Eclipse project code</a>, and a picture of the final result:
-<img src="/img/adv_list_demo.png" alt="Advanced ListView demo screenshot" title="Advanced ListView demo screenshot" width="180" height="320" class="align-left"/></p>
+<p>For the impatients, here's the <a href="http://www.intransitione.com/code/android/adv_listview_demo.zip">Eclipse project code</a> and a picture of the final result:
+<img src="/img/adv_list_demo.png" alt="Advanced ListView demo screenshot" title="Advanced ListView demo screenshot" width="180" height="320" class="thumbnail"/></p>
 
 
 <p>Let's start with the <code class="simple">Activity</code> code.
